--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -18,8 +18,8 @@ set navLinks = [
 <body>
 <header>
     <div class="headerText">
-        <h1>Välkommen till min sida!</h1>
-        <h3>Byggd på ramverket Laravel</h3>
+        <h1>Hannes Spel & Statistik</h1>
+        <h3>Byggd på ramverket Symfony</h3>
     </div>
     <nav>
     {% for link in navLinks %}
