--- a/templates/session.html.twig
+++ b/templates/session.html.twig
@@ -1,7 +1,7 @@
 {% include('header.html.twig') %}
 
 <main class="homeMain">
-    <a href="session/destroy">DESTROY SESSION</a>
+    <a href="session/destroy" class="destrotSession">DESTROY SESSION</a>
     <pre>
         {{ dump(data) }}
     </pre>
