Bättre yatzy-sida

--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,5 +1,13 @@
 <footer>
-    FOOTER
+    <div class="footerLinks">
+        <a href="./">Hem</a>
+        <a href="./session">Session</a>
+        <a href="./yatzy">Yatzy</a>
+        <a href="./highscores">Highscores</a>
+    </div>
+    <div class="name">
+        Denna sidan är skapad utav Hannes Öhman
+    </div>
 </footer> 
 
 </body>
