--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,7 +1,10 @@
 {% include('header.html.twig') %}
 
 <main class="homeMain">
-    <h1>Home</h1>
+    <h1>Välkommen till mitt slutprojekt för kursen MVC</h1>
+    <p>
+        Här kommer du att hitta en enkelt Yatzy-spel samt en flik för alla highscores i spelet.
+    </p>
 </main>
 
 {% include('footer.html.twig') %}
