--- a/templates/yatzy.html.twig
+++ b/templates/yatzy.html.twig
@@ -78,6 +78,26 @@
             </table>
         </div>
     </div>
+    <div>
+        <h2>Poäng:</h2>
+        <pre>Ones               = Summan av tärningar med ettor</pre>
+        <pre>Twos               = Summan av tärningar med tvåor</pre>
+        <pre>Threes             = Summan av tärningar med treor</pre>
+        <pre>Fours              = Summan av tärningar med fyror</pre>
+        <pre>Fives              = Summan av tärningar med femor</pre>
+        <pre>Sixes              = Summan av tärningar med sexor</pre>
+
+        <pre>Bonus              = 35 poäng om Sum är mer än 63</pre>
+
+        <pre>Three of a kind    = Summan av alla tärningar</pre>
+        <pre>Four of a kind     = Summan av alla tärningar</pre>
+        <pre>Full House         = 25 poäng</pre>
+        <pre>Small straight (4 stigande tärningar)     = 30 poäng</pre>
+        <pre>Large straight (5 stigande tärningar)     = 40 poäng</pre>
+        <pre>Chance             = Summan av alla tärningar</pre>
+        <pre>YAHTZEE            = 50 poäng</pre>
+        <pre></pre>
+    </div>
 </main>
 
 {% include('footer.html.twig') %}
