--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -98,6 +98,33 @@ footer {
     color: white;
 }
 
+footer .footerLinks {
+    width: 100%;
+    height: 4vh;
+    display: flex;
+    justify-content: space-around;
+}
+
+.footerLinks a {
+    width: auto;
+    height: 100%;
+
+    font-size: 2vh;
+    line-height: 4vh;
+    color: white;
+
+    display: inline-block;
+}
+
+footer .name {
+    width: 100%;
+    height: 4vh;
+
+    line-height: 4vh;
+
+    text-align: center;
+}
+
 /* ------------------------------------------------------------------- */
 /* --- Yatzy --------------------------------------------------------- */
 /* ------------------------------------------------------------------- */
@@ -216,12 +243,12 @@ footer {
 
 .yatzyGame .scoreTable {
     width: 20%;
-    height: 100%;
+    height: calc(100% - 1px);
     float: right;
 }
 
 .scoreTable table{
-    width: 100%;
+    width: calc(100% + 1px);
     height: 100%;
     border-collapse: collapse;
 }
