--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -407,3 +407,79 @@ footer .name {
     border: 1px solid black;
     border-radius: 5px;
 }
+
+/* ------------------------------------------------------------------- */
+/* --- Houses -------------------------------------------------------- */
+/* ------------------------------------------------------------------- */
+
+.houseMain {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
+.houseMain a {
+    width: 100%;
+    color: black;
+    text-decoration: none;
+}
+
+.house {
+    width: 100%;
+    height: 200px;
+    padding: 5px;
+    margin-bottom: 30px;
+
+    border: 2px solid black;
+    border-radius: 15px;
+
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-template-rows: 30% 50% 20%;
+
+    overflow: hidden;
+}
+
+.house h2 {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+
+    line-height: 30px;
+    text-align: center;
+}
+
+.house img {
+    height: 100%;
+    width: auto;
+    border-radius: 10px;
+
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: 4;
+}
+
+.house .rooms {
+    width: 100%;
+    height: 60px;
+    padding-left: 20px;
+
+    line-height: 60px;
+    font-size: 20px;
+}
+
+.house .details {
+    width: 100%;
+    height: 100%;
+    padding-right: 20px;
+
+    text-decoration: underline;
+    text-align: right;
+    font-size: 20px;
+}
+
+/* ------------------------------------------------------------------- */
+/* --- Property ------------------------------------------------------ */
+/* ------------------------------------------------------------------- */
