--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,10 +1,14 @@
 {%
 set navLinks = [
-    {"link": ".", "label": "Hem"},
+    {"link": "", "label": "Hem"},
     {"link": "session", "label": "Session"},
     {"link": "yatzy", "label": "Yatzy"},
     {"link": "highscores", "label": "Highscores"},
+    {"link": "houses", "label": "Houses"},
 ]
+%}
+{%
+set baseUrl = app.request.getBaseURL()|replace({"public": ""})
 %}
 <!DOCTYPE html>
 <html lang="en">
@@ -12,7 +16,7 @@ set navLinks = [
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../resources/css/app.css">
+    <link rel="stylesheet" href="{{baseUrl}}/resources/css/app.css">
     <title>Document</title>
 </head>
 <body>
@@ -23,7 +27,7 @@ set navLinks = [
     </div>
     <nav>
     {% for link in navLinks %}
-        <a href="{{ link.link }}">{{ link.label }}</a>
+        <a href="{{baseUrl}}public/{{ link.link }}">{{ link.label }}</a>
     {% endfor %}
     </nav>
 </header>
