Funktionellt färdigställt (förhoppningsvis)

--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -20,11 +20,7 @@ set current = app.request.getPathInfo()|split('/')
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{baseUrl}}/resources/css/app.css">
-    {% for link in navLinks %}
-    {% if link.link == current[1] %}
-    <title>MVC Projekt | {{link.label}}</title>
-    {% endif %}
-    {% endfor %}
+    <title>MVC Projekt | Hannes Öhman </title>
 </head>
 <body>
 <header>
