--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -443,6 +443,16 @@ footer .name {
     border: 1px solid grey
 }
 
+.sortLink {
+    width: auto;
+    
+    font-size: 15px;
+    line-height: 20px;
+
+    color: black;
+    font-weight: 700;
+}
+
 /* ------------------------------------------------------------------- */
 /* --- Session ------------------------------------------------------- */
 /* ------------------------------------------------------------------- */
@@ -462,14 +472,33 @@ footer .name {
 /* --- Houses -------------------------------------------------------- */
 /* ------------------------------------------------------------------- */
 
-.houseMain {
+.createLink {
+    width: auto;
+    height: 40px;
+    padding: 0 15px;
+    margin-bottom: 10px;
+    display: inline-block;
+
+    line-height: 40px;
+    font-size: 20px;
+    color: black;
+    text-align: center;
+
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 0px 2px 5px rgba(0,0,0,0.3);
+    background-color: white;
+}
+
+.realtorMain {
     width: 100%;
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
+    background-color: rgb(66, 66, 66);
 }
 
-.houseMain a {
+.realtorMain .houseLink {
     width: 100%;
     height: auto;
     color: black;
@@ -490,6 +519,7 @@ footer .name {
     grid-template-rows: 30% 50% 20%;
 
     overflow: hidden;
+    background-color: white;
 }
 
 .house h2 {
@@ -537,11 +567,15 @@ footer .name {
 
 .propertyMain {
     width: 100%;
+
+    background-color: rgb(66, 66, 66);
 }
 
-.propertyMain a{
-    width: 10%;
+.backLink,
+.propertyMain a {
+    width: auto;
     height: 40px;
+    padding: 0 15px;
     margin-bottom: 10px;
     display: inline-block;
 
@@ -553,9 +587,15 @@ footer .name {
     border: 1px solid black;
     border-radius: 10px;
     box-shadow: 0px 2px 5px rgba(0,0,0,0.3);
+    background-color: white;
 }
+
 .propertyMain a:nth-child(2) {
     float: right
+}
+
+.propertyMain h1 {
+    color: white;
 }
 
 .propertyMain .topPart {
@@ -572,6 +612,7 @@ footer .name {
 .topPart .info {
     width: 60%;
     height: auto;
+    color: white;
 }
 
 .info h1 {
@@ -600,6 +641,7 @@ footer .name {
 
 .bottomPart h1 {
     width: 100%;
+    color: white;
 }
 
 .bottomPart .room {
@@ -614,6 +656,7 @@ footer .name {
     border: 1px solid black;
     border-radius: 10px;
     box-shadow: 0px 2px 5px rgba(0,0,0,0.3);
+    background-color: white;
 }
 
 .room h2 {
@@ -659,4 +702,97 @@ footer .name {
 
     border: 1px solid black;
     border-radius: 5px;
+}
+
+/* ------------------------------------------------------------------- */
+/* --- Edit ---------------------------------------------------------- */
+/* ------------------------------------------------------------------- */
+
+.addRoom {
+    width: 15vh;
+    padding: 10px;
+    margin-bottom: 10px;
+    display: block;
+    
+    text-align: center;
+    font-size: 15px;
+    color: black;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 0px 2px 5px rgba(0,0,0,0.3);
+    background-color: white;
+}
+
+.editRoom {
+    height: auto;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 0px 2px 5px rgba(0,0,0,0.3);
+    background-color: white;
+}
+
+.editRoom h2 {
+    margin: 0;
+    margin-bottom: 10px;
+}
+
+.editRoom input {
+    margin-bottom: 5px;
+}
+
+.editRoom a {
+    width: auto;
+    padding: 4px 8px;
+    margin-left: 20px;
+
+    font-size: 18px;
+    color: black;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+#editHouseForm {
+    color: white;
+}
+
+.editForm {
+    padding: 10px;
+    margin-bottom: 5px;
+}
+
+.enSuiteForm {
+    margin-left: 70px;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+.addForm {
+    width: 40%;
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: white;
+}
+
+.addForm input,
+.addForm select {
+    margin-bottom: 10px;
+}
+
+/* ------------------------------------------------------------------- */
+/* --- Session ------------------------------------------------------- */
+/* ------------------------------------------------------------------- */
+
+#createHouse {
+    width: 50%;
+
+    padding: 20px;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+#createHouse label {
+    font-size: 20px;
 }
