--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -445,7 +445,7 @@ footer .name {
 
 .sortLink {
     width: auto;
-    
+
     font-size: 15px;
     line-height: 20px;
 
@@ -713,7 +713,7 @@ footer .name {
     padding: 10px;
     margin-bottom: 10px;
     display: block;
-    
+
     text-align: center;
     font-size: 15px;
     color: black;
@@ -791,6 +791,7 @@ footer .name {
     padding: 20px;
     border: 1px solid black;
     border-radius: 10px;
+    background-color: white;
 }
 
 #createHouse label {
